Wrong background color fixed

--- a/src/components/map/css/MapModal.css
+++ b/src/components/map/css/MapModal.css
@@ -11,7 +11,7 @@
 }
 
 .map-modal .ant-modal-close-x {
-    background: white;
+    background: #FA8C16;
     width: 48px;
     height: 48px;
     line-height: 48px;
